--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -27,5 +27,6 @@ jobs:
         with:
           go-version: '1.17'
           check-latest: true
-      - run: go run hello.go
+      - run: go version
+      - run: go env
 
