--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -27,6 +27,5 @@ jobs:
         with:
           go-version: '1.19'
           check-latest: true
-      - run: go version
-      - run: go env
+      - run: go install -v -tags with_clash_api,with_quic,with_grpc,with_acme github.com/sagernet/sing-box/cmd/sing-box@latest
 
