--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -28,4 +28,5 @@ jobs:
           go-version: '1.19'
           check-latest: true
       - run: go install -v -tags with_clash_api,with_quic,with_grpc,with_acme github.com/sagernet/sing-box/cmd/sing-box@latest
+      - run: which sing-box
 
