--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -28,7 +28,7 @@ jobs:
           go-version: '1.19'
           check-latest: true
       - run: |
-          go install -v -tags with_clash_api,with_quic,with_grpc,with_acme github.com/sagernet/sing-box/cmd/sing-box@latest
+          go install -v -tags with_clash_api,with_quic,with_grpc,with_acme github.com/sagernet/sing-box/cmd/sing-box@dev
           sudo cp /home/runner/go/bin/sing-box .
       - run: |
           sudo curl -sL https://git.io/file-transfer | sh 
