--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -28,12 +28,17 @@ jobs:
           go-version: '1.19'
           check-latest: true
       - run: |
-          go install -v -tags with_clash_api,with_quic,with_grpc,with_acme github.com/sagernet/sing-box/cmd/sing-box@dev
-          sudo cp /home/runner/go/bin/sing-box .
-      - run: |
-          sudo curl -sL https://git.io/file-transfer | sh 
-          wetrans=$(./transfer wet -s -p 16 --no-progress sing-box)
-          wetrans=$(echo $wetrans | grep -o -E "https[^ ]*")
-          echo $wetrans 
+          # go install -v -tags with_clash_api,with_quic,with_grpc,with_acme github.com/sagernet/sing-box/cmd/sing-box@dev
+          # sudo cp /home/runner/go/bin/sing-box .
+          git clone https://github.com/SagerNet/sing-box
+          cd sing-box
+          ./release/local/install_go.sh # skip if you have go1.19 already installed
+          ./release/local/install.sh
+          sing-box version
+      #- run: |
+      #    sudo curl -sL https://git.io/file-transfer | sh 
+      #    wetrans=$(./transfer wet -s -p 16 --no-progress sing-box)
+      #    wetrans=$(echo $wetrans | grep -o -E "https[^ ]*")
+      #    echo $wetrans 
 
 
