--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -28,8 +28,10 @@ jobs:
           go-version: '1.19'
           check-latest: true
       - run: |
-          go install -v -tags with_clash_api,with_quic,with_grpc,with_acme github.com/SagerNet/sing-box@dev
-          sudo cp /home/runner/go/bin/sing-box .
+          git clone -b dev https://github.com/SagerNet/sing-box.git
+          cd sing-box
+          go build -v -trimpath -tags 'with_clash_api,with_quic' -ldflags '-X "github.com/sagernet/sing-box/constant.Commit=`git rev-parse HEAD`" -w -s -buildid=' ./cmd/sing-box
+          #sudo cp /home/runner/go/bin/sing-box .
           ./sing-box version
 
       - run: |
