--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           #git clone -b dev https://github.com/SagerNet/sing-box.git
           #cd sing-box
-          go install -v -trimpath -tags 'with_clash_api,with_quic' -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" github.com/SagerNet/sing-box@dev
+          go install -v -tags 'with_clash_api,with_quic' -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" github.com/SagerNet/sing-box@dev
           sudo cp /home/runner/go/bin/sing-box .
           ./sing-box version
 
