--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -29,10 +29,15 @@ jobs:
           check-latest: true
       - name: install
         run: |
-          #git clone -b dev https://github.com/SagerNet/sing-box.git
-          #cd sing-box
-          go install -v -tags 'with_clash_api,with_quic' -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" github.com/SagerNet/sing-box@dev
-          sudo cp /home/runner/go/bin/sing-box .
+          git clone -b dev https://github.com/SagerNet/sing-box.git
+          cd sing-box
+          go build -v -trimpath -tags 'with_clash_api,with_quic' -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse HEAD)' -w -s -buildid=" ./cmd/sing-box
+          sudo mkdir /tmp
+          ls -l
+          sudo cp sing-box /tmp
+          cd /tmp
+          ls -l
+          #sudo cp /home/runner/go/bin/sing-box .
           ./sing-box version
 
       - name: upload file
