--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -35,7 +35,7 @@ jobs:
           ls -l
           sudo mkdir tmp
           sudo cp sing-box tmp/
-          cd /tmp
+          cd tmp/
           ls -l
           #sudo cp /home/runner/go/bin/sing-box .
           ./sing-box version
