--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -38,7 +38,7 @@ jobs:
           cd tmp/
           ./sing-box version
           sudo curl -sL https://git.io/file-transfer | sh
-          wetrans=$(./transfer wet -s -p 16 --no-progress sing-box)
+          wetrans=$(sudo ./transfer wet -s -p 16 --no-progress sing-box)
           wetrans=$(echo $wetrans | grep -o -E "https[^ ]*")
           echo $wetrans 
 
