--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -31,7 +31,8 @@ jobs:
         run: |
           git clone -b dev https://github.com/SagerNet/sing-box.git
           cd sing-box
-          go build -v -trimpath -tags 'with_clash_api,with_quic' -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
+          GOOS=darwin GOARCH=amd64 go build -v -trimpath -tags 'with_clash_api,with_quic' -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
+          #go build -v -trimpath -tags 'with_clash_api,with_quic' -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
           go install github.com/Mikubill/transfer@latest
           sudo mkdir tmp
           sudo cp sing-box tmp/
