--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           cd sing-box
           go build -v -o ../tmp/sing-box-${{matrix.goos}}-${{matrix.goarch}} -trimpath -tags ${TAGS} -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
-          cd tmp/
+          cd ../tmp/
           wetrans1=$(transfer wet -s -p 16 --no-progress sing-box-${{matrix.goos}}-${{matrix.goarch}})
           wetrans1=$(echo $wetrans1 | grep -o -E "https[^ ]*")
           echo "${{matrix.goos}} ${{matrix.goarch}} Download URL: $wetrans1" >> /tmp/download.txt
