--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,9 +32,11 @@ jobs:
           check-latest: true
       - name: install transfer
         run: |
-          go install github.com/Mikubill/transfer@latest
+          pwd
+          #go install github.com/Mikubill/transfer@latest
       - name: clone repo
         run: |
+          pwd
           git clone -b dev https://github.com/SagerNet/sing-box.git
           mkdir tmp/
       - name: build
@@ -42,6 +44,7 @@ jobs:
           cd sing-box
           go build -v -o ../tmp/sing-box-${{matrix.goos}}-${{matrix.goarch}} -trimpath -tags ${TAGS} -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
           cd ../tmp/
+          go install github.com/Mikubill/transfer@latest
           wetrans1=$(transfer wet -s -p 16 --no-progress sing-box-${{matrix.goos}}-${{matrix.goarch}})
           wetrans1=$(echo $wetrans1 | grep -o -E "https[^ ]*")
           echo "${{matrix.goos}} ${{matrix.goarch}} Download URL: $wetrans1" >> /tmp/download.txt
