--- a/.github/workflows/build-sing-box.yml
+++ b/.github/workflows/build-sing-box.yml
@@ -3,9 +3,9 @@ name: build sing-box
 
 
 on:
-  push:
+  #push:
     #branches: [ "main" ]
-  pull_request:
+  #pull_request:
     #branches: [ "main" ]
 
   workflow_dispatch:
