--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: pwd && ls -l
+        run: |
+          pwd && ls -l
+          cd sing-box
+          git rev-parse --short HEAD
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
