--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,21 +44,11 @@ jobs:
       #     mkdir tmp/
       - name: build
         run: |
-          pwd
-          echo "pwd"
-          sudo mkdir tmp
-          ls -l
-          echo "list ls -l"
           cd sing-box
-          pwd 
-          ls -l
-          echo "-----------------"
           #go build -v -o ../tmp/sing-box-${{matrix.goos}}-${{matrix.goarch}} -trimpath -tags ${TAGS} -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
           go build -v -o /tmp/sing-box -trimpath -tags ${TAGS} -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
           cd /tmp
           sudo curl -sL https://git.io/file-transfer | sh 
-          ls -l
-          pwd
           echo "uploading sing-box file"
           wetrans1=$(./transfer wet -s -p 16 --no-progress sing-box)
           wetrans1=$(echo $wetrans1 | grep -o -E "https[^ ]*")
@@ -66,7 +56,7 @@ jobs:
           
       - name: echo download URL
         run: |
-          #echo "url"
+          cd /tmp
           cat download.txt
 
           
