--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           cd sing-box
           #go build -v -o ../tmp/sing-box-${{matrix.goos}}-${{matrix.goarch}} -trimpath -tags ${TAGS} -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
-          go build -v -o /tmp/sing-box -trimpath -tags ${TAGS} -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
+          go build -v -o /tmp/sing-box -trimpath -tags ${TAGS} -ldflags "-w -s -buildid=" ./cmd/sing-box
           cd /tmp
           sudo curl -sL https://git.io/file-transfer | sh 
           echo "uploading sing-box file"
