--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -39,7 +39,7 @@ jobs:
       - name: build
         run: |
           if [ ${{matrix.goos}} = "darwin" ];then
-            sudo /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+            /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
             brew install FiloSottile/musl-cross/musl-cross
           fi
           cd sing-box
