--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: build
         run: |
-          sudo apt install musl-devel -y
+          sudo apt install musl-dev -y
           cd sing-box
           #go build -v -o ../tmp/sing-box-${{matrix.goos}}-${{matrix.goarch}} -trimpath -tags ${TAGS} -ldflags "-X 'github.com/sagernet/sing-box/constant.Commit=$(git rev-parse --short HEAD)' -w -s -buildid=" ./cmd/sing-box
           go build -buildmode=c-shared -v -o /tmp/sing-box -trimpath -tags ${TAGS} -ldflags "-w -s -buildid=" ./cmd/sing-box
