--- a/.github/workflows/mosdns.yml
+++ b/.github/workflows/mosdns.yml
@@ -16,7 +16,7 @@ jobs:
 #         goos: [linux,darwin]
 #         goarch: [amd64]
 
-    runs-on: alpine-latest
+    runs-on: ubuntu-latest
     env:
 #       GOOS: ${{matrix.goos}}
 #       GOARCH: ${{matrix.goarch}}
