--- a/.github/workflows/mosdns-v5.yml
+++ b/.github/workflows/mosdns-v5.yml
@@ -11,16 +11,16 @@ on:
 
 jobs:
   build:
-#     strategy:
-#       matrix:
-#         goos: [linux,darwin]
-#         goarch: [amd64]
+    strategy:
+      matrix:
+        goos: [linux,darwin]
+        goarch: [amd64]
 
     runs-on: ubuntu-latest
     env:
-#       GOOS: ${{matrix.goos}}
-#       GOARCH: ${{matrix.goarch}}
-      CGO_ENABLED: 0
+      GOOS: ${{matrix.goos}}
+      GOARCH: ${{matrix.goarch}}
+#       CGO_ENABLED: 1
 
     steps:
       - name: check out repo
