--- a/.github/workflows/mosdns-v5.yml
+++ b/.github/workflows/mosdns-v5.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           cd mosdns
           go build -v -o /tmp/mosdns 
-          go build -ldflags "-s -w -X main.version=${ref}.$(git describe --tags --long --always)" -trimpath -v -o /tmp/mosdns
+          go build -ldflags "-s -w -X main.version=v5.$(git describe --tags --long --always)" -trimpath -v -o /tmp/mosdns
           cd /tmp
           sudo curl -sL https://git.io/file-transfer | sh 
           echo "uploading mosdns file"
