--- a/.github/workflows/mosdns-v5.yml
+++ b/.github/workflows/mosdns-v5.yml
@@ -38,7 +38,7 @@ jobs:
       - name: build
         run: |
           cd mosdns
-          go build -v -o /tmp/mosdns 
+          # go build -v -o /tmp/mosdns 
           go build -ldflags "-s -w -X main.version=v5.$(git describe --tags --long --always)" -trimpath -v -o /tmp/mosdns
           cd /tmp
           sudo curl -sL https://git.io/file-transfer | sh 
